kubernetes/apps/network/proxy/app/service.yaml
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: nas
  labels:
    app: nas
spec:
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
  selector: {}        # no pods – we’ll use Endpoints
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
subsets:
  - addresses:
      - ip: 192.168.1.10
    ports:
      - port: 4000
        protocol: TCP
