kubernetes/apps/network/proxy/app/ingress.yaml
---
# yaml-language-server: $schema=https://github.com/instrumenta/kubernetes-json-schema/raw/refs/heads/master/v1.18.1/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name nas
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: "nas.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *name
                port:
                  number: 80
